// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Fixtures > should match snapshot of fibonacci.asm 1`] = `
{
  "data": [
    {
      "directive": "EQU",
      "label": "N",
      "position": [
        194,
        200,
      ],
      "type": "data-directive",
      "value": 10,
    },
    {
      "directive": "DB",
      "label": "INICIO",
      "position": [
        266,
        270,
      ],
      "type": "data-directive",
      "values": [
        1,
      ],
    },
  ],
  "instructions": [
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "BX",
      "position": [
        299,
        324,
      ],
      "size": 16,
      "src": 4097,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "AL",
      "position": [
        333,
        342,
      ],
      "size": 8,
      "src": 0,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-mem",
      "out": "AH",
      "position": [
        351,
        365,
      ],
      "size": 8,
      "src": {
        "address": 4096,
        "mode": "direct",
      },
      "type": "instruction",
    },
    {
      "instruction": "CMP",
      "label": "BUCLE",
      "mode": "reg<-imd",
      "out": "BX",
      "position": [
        376,
        401,
      ],
      "size": 16,
      "src": 4106,
      "type": "instruction",
    },
    {
      "disp": 14,
      "instruction": "JNS",
      "label": null,
      "position": [
        410,
        417,
      ],
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-reg",
      "out": "CL",
      "position": [
        426,
        436,
      ],
      "size": 8,
      "src": "AH",
      "type": "instruction",
    },
    {
      "instruction": "ADD",
      "label": null,
      "mode": "reg<-reg",
      "out": "CL",
      "position": [
        445,
        455,
      ],
      "size": 8,
      "src": "AL",
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-reg",
      "out": "AL",
      "position": [
        464,
        474,
      ],
      "size": 8,
      "src": "AH",
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-reg",
      "out": "AH",
      "position": [
        483,
        493,
      ],
      "size": 8,
      "src": "CL",
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "mem<-reg",
      "out": {
        "mode": "indirect",
      },
      "position": [
        502,
        514,
      ],
      "size": 8,
      "src": "CL",
      "type": "instruction",
    },
    {
      "instruction": "INC",
      "label": null,
      "mode": "reg",
      "out": "BX",
      "position": [
        523,
        529,
      ],
      "type": "instruction",
    },
    {
      "disp": 65516,
      "instruction": "JMP",
      "label": null,
      "position": [
        538,
        547,
      ],
      "type": "instruction",
    },
    {
      "instruction": "HLT",
      "label": "FIN",
      "position": [
        556,
        559,
      ],
      "type": "instruction",
    },
  ],
  "store": GlobalStore {
    "codeMemory": Set {
      8192,
      8193,
      8194,
      8195,
      8196,
      8197,
      8198,
      8199,
      8200,
      8201,
      8202,
      8203,
      8204,
      8205,
      8206,
      8207,
      8208,
      8209,
      8210,
      8211,
      8212,
      8213,
      8214,
      8215,
      8216,
      8217,
      8218,
      8219,
      8220,
      8221,
      8222,
    },
    "labels": Map {
      "N" => {
        "constant": {
          "directive": "EQU",
          "label": "N",
          "position": [
            194,
            200,
          ],
          "type": "data-directive",
          "value": 10,
        },
        "type": "EQU",
      },
      "INICIO" => {
        "address": 4096,
        "type": "DB",
      },
      "BUCLE" => {
        "address": 8202,
        "type": "instruction",
      },
      "FIN" => {
        "address": 8222,
        "type": "instruction",
      },
    },
  },
  "success": true,
}
`;

exports[`Fixtures > should match snapshot of multiplicar.asm 1`] = `
{
  "data": [
    {
      "directive": "DW",
      "label": "A",
      "position": [
        33,
        38,
      ],
      "type": "data-directive",
      "values": [
        25,
      ],
    },
    {
      "directive": "DW",
      "label": "B",
      "position": [
        52,
        56,
      ],
      "type": "data-directive",
      "values": [
        4,
      ],
    },
    {
      "directive": "DW",
      "label": "RES",
      "position": [
        72,
        76,
      ],
      "type": "data-directive",
      "values": [
        "?",
      ],
    },
  ],
  "instructions": [
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "AX",
      "position": [
        111,
        120,
      ],
      "size": 16,
      "src": 0,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-mem",
      "out": "BX",
      "position": [
        132,
        141,
      ],
      "size": 16,
      "src": {
        "address": 4098,
        "mode": "direct",
      },
      "type": "instruction",
    },
    {
      "instruction": "CMP",
      "label": null,
      "mode": "reg<-imd",
      "out": "BX",
      "position": [
        153,
        162,
      ],
      "size": 16,
      "src": 0,
      "type": "instruction",
    },
    {
      "disp": 10,
      "instruction": "JZ",
      "label": null,
      "position": [
        174,
        180,
      ],
      "type": "instruction",
    },
    {
      "instruction": "ADD",
      "label": "SUMAR",
      "mode": "reg<-mem",
      "out": "AX",
      "position": [
        192,
        200,
      ],
      "size": 16,
      "src": {
        "address": 4096,
        "mode": "direct",
      },
      "type": "instruction",
    },
    {
      "address": 4098,
      "instruction": "DEC",
      "label": null,
      "mode": "mem-direct",
      "position": [
        212,
        217,
      ],
      "size": 16,
      "type": "instruction",
    },
    {
      "disp": 246,
      "instruction": "JNZ",
      "label": null,
      "position": [
        229,
        238,
      ],
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": "FIN",
      "mode": "mem<-reg",
      "out": {
        "address": 4100,
        "mode": "direct",
      },
      "position": [
        250,
        261,
      ],
      "size": 16,
      "src": "AX",
      "type": "instruction",
    },
    {
      "instruction": "HLT",
      "label": null,
      "position": [
        273,
        276,
      ],
      "type": "instruction",
    },
  ],
  "store": GlobalStore {
    "codeMemory": Set {
      8192,
      8193,
      8194,
      8195,
      8196,
      8197,
      8198,
      8199,
      8200,
      8201,
      8202,
      8203,
      8204,
      8205,
      8206,
      8207,
      8208,
      8209,
      8210,
      8211,
      8212,
      8213,
      8214,
      8215,
      8216,
      8217,
      8218,
      8219,
    },
    "labels": Map {
      "A" => {
        "address": 4096,
        "type": "DW",
      },
      "B" => {
        "address": 4098,
        "type": "DW",
      },
      "RES" => {
        "address": 4100,
        "type": "DW",
      },
      "SUMAR" => {
        "address": 8205,
        "type": "instruction",
      },
      "FIN" => {
        "address": 8215,
        "type": "instruction",
      },
    },
  },
  "success": true,
}
`;

exports[`Fixtures > should match snapshot of parcial.asm 1`] = `
{
  "data": [
    {
      "directive": "DB",
      "label": "NOMBRE",
      "position": [
        56,
        78,
      ],
      "type": "data-directive",
      "values": [
        74,
        117,
        97,
        110,
        76,
        111,
        114,
        101,
        110,
        122,
        111,
        77,
        97,
        114,
        116,
        105,
        110,
      ],
    },
    {
      "directive": "DB",
      "label": "FIN_NOMBRE",
      "position": [
        110,
        116,
      ],
      "type": "data-directive",
      "values": [
        0,
      ],
    },
    {
      "directive": "DB",
      "label": "VOCALES",
      "position": [
        145,
        160,
      ],
      "type": "data-directive",
      "values": [
        65,
        69,
        73,
        79,
        85,
        97,
        101,
        105,
        111,
        117,
      ],
    },
    {
      "directive": "DB",
      "label": "FIN_VOCALES",
      "position": [
        193,
        199,
      ],
      "type": "data-directive",
      "values": [
        0,
      ],
    },
    {
      "directive": "DB",
      "label": "CANTIDAD_VOCALES",
      "position": [
        237,
        241,
      ],
      "type": "data-directive",
      "values": [
        0,
      ],
    },
  ],
  "instructions": [
    {
      "instruction": "PUSH",
      "label": "SWAP",
      "position": [
        411,
        418,
      ],
      "register": "AX",
      "type": "instruction",
    },
    {
      "instruction": "PUSH",
      "label": null,
      "position": [
        439,
        446,
      ],
      "register": "BX",
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-reg",
      "out": "BX",
      "position": [
        467,
        477,
      ],
      "size": 16,
      "src": "CX",
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-mem",
      "out": "AL",
      "position": [
        498,
        510,
      ],
      "size": 8,
      "src": {
        "mode": "indirect",
      },
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-reg",
      "out": "BX",
      "position": [
        552,
        562,
      ],
      "size": 16,
      "src": "DX",
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-mem",
      "out": "AH",
      "position": [
        583,
        595,
      ],
      "size": 8,
      "src": {
        "mode": "indirect",
      },
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "mem<-reg",
      "out": {
        "mode": "indirect",
      },
      "position": [
        638,
        650,
      ],
      "size": 8,
      "src": "AL",
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-reg",
      "out": "BX",
      "position": [
        709,
        719,
      ],
      "size": 16,
      "src": "CX",
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "mem<-reg",
      "out": {
        "mode": "indirect",
      },
      "position": [
        740,
        752,
      ],
      "size": 8,
      "src": "AH",
      "type": "instruction",
    },
    {
      "instruction": "POP",
      "label": null,
      "position": [
        812,
        818,
      ],
      "register": "BX",
      "type": "instruction",
    },
    {
      "instruction": "POP",
      "label": null,
      "position": [
        839,
        845,
      ],
      "register": "AX",
      "type": "instruction",
    },
    {
      "instruction": "RET",
      "label": null,
      "position": [
        866,
        869,
      ],
      "type": "instruction",
    },
    {
      "instruction": "PUSH",
      "label": "ES_VOCAL",
      "position": [
        999,
        1006,
      ],
      "register": "BX",
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-reg",
      "out": "BX",
      "position": [
        1027,
        1037,
      ],
      "size": 16,
      "src": "SP",
      "type": "instruction",
    },
    {
      "instruction": "ADD",
      "label": null,
      "mode": "reg<-imd",
      "out": "BX",
      "position": [
        1058,
        1071,
      ],
      "size": 16,
      "src": 4,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-mem",
      "out": "AL",
      "position": [
        1092,
        1104,
      ],
      "size": 8,
      "src": {
        "mode": "indirect",
      },
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "BX",
      "position": [
        1142,
        1168,
      ],
      "size": 16,
      "src": 4113,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "AH",
      "position": [
        1189,
        1200,
      ],
      "size": 8,
      "src": 0,
      "type": "instruction",
    },
    {
      "instruction": "INC",
      "label": "ES_VOCAL_LOOP",
      "mode": "reg",
      "out": "BX",
      "position": [
        1221,
        1227,
      ],
      "type": "instruction",
    },
    {
      "instruction": "CMP",
      "label": null,
      "mode": "reg<-imd",
      "out": "BX",
      "position": [
        1248,
        1274,
      ],
      "size": 16,
      "src": 4124,
      "type": "instruction",
    },
    {
      "disp": 7,
      "instruction": "JZ",
      "label": null,
      "position": [
        1295,
        1310,
      ],
      "type": "instruction",
    },
    {
      "instruction": "CMP",
      "label": null,
      "mode": "reg<-mem",
      "out": "AL",
      "position": [
        1331,
        1343,
      ],
      "size": 8,
      "src": {
        "mode": "indirect",
      },
      "type": "instruction",
    },
    {
      "disp": 245,
      "instruction": "JNZ",
      "label": null,
      "position": [
        1364,
        1381,
      ],
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "AH",
      "position": [
        1402,
        1414,
      ],
      "size": 8,
      "src": 255,
      "type": "instruction",
    },
    {
      "instruction": "POP",
      "label": "ES_VOCAL_FIN",
      "position": [
        1435,
        1441,
      ],
      "register": "BX",
      "type": "instruction",
    },
    {
      "instruction": "RET",
      "label": null,
      "position": [
        1462,
        1465,
      ],
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "CX",
      "position": [
        1749,
        1770,
      ],
      "size": 16,
      "src": 4096,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "DX",
      "position": [
        1791,
        1820,
      ],
      "size": 16,
      "src": 4112,
      "type": "instruction",
    },
    {
      "instruction": "CMP",
      "label": "MAIN_LOOP",
      "mode": "reg<-reg",
      "out": "DX",
      "position": [
        1841,
        1851,
      ],
      "size": 16,
      "src": "CX",
      "type": "instruction",
    },
    {
      "disp": 56,
      "instruction": "JS",
      "label": null,
      "position": [
        1872,
        1883,
      ],
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-reg",
      "out": "BX",
      "position": [
        2003,
        2013,
      ],
      "size": 16,
      "src": "CX",
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-mem",
      "out": "AL",
      "position": [
        2034,
        2046,
      ],
      "size": 8,
      "src": {
        "mode": "indirect",
      },
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "AH",
      "position": [
        2067,
        2077,
      ],
      "size": 8,
      "src": 0,
      "type": "instruction",
    },
    {
      "instruction": "PUSH",
      "label": null,
      "position": [
        2098,
        2105,
      ],
      "register": "AX",
      "type": "instruction",
    },
    {
      "disp": 4094,
      "instruction": "CALL",
      "label": null,
      "position": [
        2126,
        2139,
      ],
      "type": "instruction",
    },
    {
      "instruction": "CMP",
      "label": null,
      "mode": "reg<-imd",
      "out": "AH",
      "position": [
        2160,
        2169,
      ],
      "size": 8,
      "src": 0,
      "type": "instruction",
    },
    {
      "disp": 4,
      "instruction": "JZ",
      "label": null,
      "position": [
        2190,
        2204,
      ],
      "type": "instruction",
    },
    {
      "address": 4125,
      "instruction": "INC",
      "label": null,
      "mode": "mem-direct",
      "position": [
        2225,
        2245,
      ],
      "size": 8,
      "type": "instruction",
    },
    {
      "instruction": "POP",
      "label": "NO_CONTAR_1",
      "position": [
        2266,
        2272,
      ],
      "register": "AX",
      "type": "instruction",
    },
    {
      "instruction": "CMP",
      "label": null,
      "mode": "reg<-reg",
      "out": "DX",
      "position": [
        2361,
        2371,
      ],
      "size": 16,
      "src": "CX",
      "type": "instruction",
    },
    {
      "disp": 30,
      "instruction": "JZ",
      "label": null,
      "position": [
        2392,
        2403,
      ],
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-reg",
      "out": "BX",
      "position": [
        2523,
        2533,
      ],
      "size": 16,
      "src": "DX",
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-mem",
      "out": "AL",
      "position": [
        2554,
        2566,
      ],
      "size": 8,
      "src": {
        "mode": "indirect",
      },
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "AH",
      "position": [
        2587,
        2596,
      ],
      "size": 8,
      "src": 0,
      "type": "instruction",
    },
    {
      "instruction": "PUSH",
      "label": null,
      "position": [
        2617,
        2624,
      ],
      "register": "AX",
      "type": "instruction",
    },
    {
      "disp": 4068,
      "instruction": "CALL",
      "label": null,
      "position": [
        2645,
        2658,
      ],
      "type": "instruction",
    },
    {
      "instruction": "CMP",
      "label": null,
      "mode": "reg<-imd",
      "out": "AH",
      "position": [
        2679,
        2688,
      ],
      "size": 8,
      "src": 0,
      "type": "instruction",
    },
    {
      "disp": 4,
      "instruction": "JZ",
      "label": null,
      "position": [
        2709,
        2723,
      ],
      "type": "instruction",
    },
    {
      "address": 4125,
      "instruction": "INC",
      "label": null,
      "mode": "mem-direct",
      "position": [
        2744,
        2764,
      ],
      "size": 8,
      "type": "instruction",
    },
    {
      "instruction": "POP",
      "label": "NO_CONTAR_2",
      "position": [
        2785,
        2791,
      ],
      "register": "AX",
      "type": "instruction",
    },
    {
      "disp": 4035,
      "instruction": "CALL",
      "label": null,
      "position": [
        2842,
        2851,
      ],
      "type": "instruction",
    },
    {
      "instruction": "INC",
      "label": null,
      "mode": "reg",
      "out": "CX",
      "position": [
        2872,
        2878,
      ],
      "type": "instruction",
    },
    {
      "instruction": "DEC",
      "label": null,
      "mode": "reg",
      "out": "DX",
      "position": [
        2899,
        2905,
      ],
      "type": "instruction",
    },
    {
      "disp": 65476,
      "instruction": "JMP",
      "label": null,
      "position": [
        2926,
        2939,
      ],
      "type": "instruction",
    },
    {
      "instruction": "HLT",
      "label": "LOOP_FIN",
      "position": [
        2960,
        2963,
      ],
      "type": "instruction",
    },
  ],
  "store": GlobalStore {
    "codeMemory": Set {
      12288,
      12289,
      12290,
      12291,
      12292,
      12293,
      12294,
      12295,
      12296,
      12297,
      12298,
      12299,
      12300,
      12301,
      12302,
      12303,
      12304,
      12305,
      12306,
      12307,
      12308,
      12309,
      12310,
      12311,
      12312,
      12313,
      12314,
      12315,
      12316,
      12317,
      12318,
      12319,
      12320,
      12321,
      12322,
      12323,
      12324,
      12325,
      12326,
      12327,
      12328,
      12329,
      12330,
      12331,
      12332,
      12333,
      12334,
      12335,
      12336,
      12337,
      8192,
      8193,
      8194,
      8195,
      8196,
      8197,
      8198,
      8199,
      8200,
      8201,
      8202,
      8203,
      8204,
      8205,
      8206,
      8207,
      8208,
      8209,
      8210,
      8211,
      8212,
      8213,
      8214,
      8215,
      8216,
      8217,
      8218,
      8219,
      8220,
      8221,
      8222,
      8223,
      8224,
      8225,
      8226,
      8227,
      8228,
      8229,
      8230,
      8231,
      8232,
      8233,
      8234,
      8235,
      8236,
      8237,
      8238,
      8239,
      8240,
      8241,
      8242,
      8243,
      8244,
      8245,
      8246,
      8247,
      8248,
      8249,
      8250,
      8251,
      8252,
      8253,
      8254,
      8255,
      8256,
      8257,
      8258,
    },
    "labels": Map {
      "NOMBRE" => {
        "address": 4096,
        "type": "DB",
      },
      "FIN_NOMBRE" => {
        "address": 4113,
        "type": "DB",
      },
      "VOCALES" => {
        "address": 4114,
        "type": "DB",
      },
      "FIN_VOCALES" => {
        "address": 4124,
        "type": "DB",
      },
      "CANTIDAD_VOCALES" => {
        "address": 4125,
        "type": "DB",
      },
      "SWAP" => {
        "address": 12288,
        "type": "instruction",
      },
      "ES_VOCAL" => {
        "address": 12307,
        "type": "instruction",
      },
      "ES_VOCAL_LOOP" => {
        "address": 12322,
        "type": "instruction",
      },
      "ES_VOCAL_FIN" => {
        "address": 12336,
        "type": "instruction",
      },
      "MAIN_LOOP" => {
        "address": 8198,
        "type": "instruction",
      },
      "NO_CONTAR_1" => {
        "address": 8223,
        "type": "instruction",
      },
      "NO_CONTAR_2" => {
        "address": 8249,
        "type": "instruction",
      },
      "LOOP_FIN" => {
        "address": 8258,
        "type": "instruction",
      },
    },
  },
  "success": true,
}
`;

exports[`Fixtures > should match snapshot of resto.asm 1`] = `
{
  "data": [
    {
      "directive": "DW",
      "label": "N",
      "position": [
        35,
        41,
      ],
      "type": "data-directive",
      "values": [
        255,
      ],
    },
    {
      "directive": "DW",
      "label": "M",
      "position": [
        56,
        60,
      ],
      "type": "data-directive",
      "values": [
        2,
      ],
    },
    {
      "directive": "DW",
      "label": "R",
      "position": [
        75,
        79,
      ],
      "type": "data-directive",
      "values": [
        "?",
      ],
    },
  ],
  "instructions": [
    {
      "instruction": "CMP",
      "label": "RESTO",
      "mode": "reg<-reg",
      "out": "AX",
      "position": [
        247,
        256,
      ],
      "size": 16,
      "src": "BX",
      "type": "instruction",
    },
    {
      "disp": 5,
      "instruction": "JS",
      "label": null,
      "position": [
        269,
        279,
      ],
      "type": "instruction",
    },
    {
      "instruction": "SUB",
      "label": null,
      "mode": "reg<-reg",
      "out": "AX",
      "position": [
        294,
        303,
      ],
      "size": 16,
      "src": "BX",
      "type": "instruction",
    },
    {
      "disp": 65527,
      "instruction": "JMP",
      "label": null,
      "position": [
        316,
        325,
      ],
      "type": "instruction",
    },
    {
      "instruction": "RET",
      "label": "RETORNO",
      "position": [
        340,
        343,
      ],
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-mem",
      "out": "AX",
      "position": [
        380,
        389,
      ],
      "size": 16,
      "src": {
        "address": 4096,
        "mode": "direct",
      },
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-mem",
      "out": "BX",
      "position": [
        402,
        411,
      ],
      "size": 16,
      "src": {
        "address": 4098,
        "mode": "direct",
      },
      "type": "instruction",
    },
    {
      "disp": 4085,
      "instruction": "CALL",
      "label": null,
      "position": [
        424,
        434,
      ],
      "type": "instruction",
    },
    {
      "instruction": "HLT",
      "label": null,
      "position": [
        447,
        450,
      ],
      "type": "instruction",
    },
  ],
  "store": GlobalStore {
    "codeMemory": Set {
      12288,
      12289,
      12290,
      12291,
      12292,
      12293,
      12294,
      12295,
      12296,
      12297,
      8192,
      8193,
      8194,
      8195,
      8196,
      8197,
      8198,
      8199,
      8200,
      8201,
      8202,
      8203,
    },
    "labels": Map {
      "N" => {
        "address": 4096,
        "type": "DW",
      },
      "M" => {
        "address": 4098,
        "type": "DW",
      },
      "R" => {
        "address": 4100,
        "type": "DW",
      },
      "RESTO" => {
        "address": 12288,
        "type": "instruction",
      },
      "RETORNO" => {
        "address": 12297,
        "type": "instruction",
      },
    },
  },
  "success": true,
}
`;

exports[`Fixtures > should match snapshot of rotar.asm 1`] = `
{
  "data": [
    {
      "directive": "DW",
      "label": "NUMEROBINARIO",
      "position": [
        25,
        45,
      ],
      "type": "data-directive",
      "values": [
        32933,
      ],
    },
    {
      "directive": "DW",
      "label": "CANTROTACIONES",
      "position": [
        62,
        66,
      ],
      "type": "data-directive",
      "values": [
        3,
      ],
    },
  ],
  "instructions": [
    {
      "instruction": "DEC",
      "label": "ROTARIZQ",
      "mode": "reg",
      "out": "CX",
      "position": [
        209,
        215,
      ],
      "type": "instruction",
    },
    {
      "disp": 8,
      "instruction": "JS",
      "label": null,
      "position": [
        232,
        247,
      ],
      "type": "instruction",
    },
    {
      "instruction": "ADD",
      "label": null,
      "mode": "reg<-reg",
      "out": "AX",
      "position": [
        264,
        273,
      ],
      "size": 16,
      "src": "AX",
      "type": "instruction",
    },
    {
      "disp": 249,
      "instruction": "JNC",
      "label": null,
      "position": [
        290,
        302,
      ],
      "type": "instruction",
    },
    {
      "instruction": "INC",
      "label": null,
      "mode": "reg",
      "out": "AX",
      "position": [
        319,
        325,
      ],
      "type": "instruction",
    },
    {
      "disp": 65525,
      "instruction": "JMP",
      "label": null,
      "position": [
        342,
        354,
      ],
      "type": "instruction",
    },
    {
      "instruction": "RET",
      "label": "ROTARIZQ_FIN",
      "position": [
        371,
        374,
      ],
      "type": "instruction",
    },
    {
      "instruction": "SUB",
      "label": "ROTARDER",
      "mode": "reg<-imd",
      "out": "CX",
      "position": [
        504,
        514,
      ],
      "size": 16,
      "src": 16,
      "type": "instruction",
    },
    {
      "instruction": "NEG",
      "label": null,
      "mode": "reg",
      "out": "CX",
      "position": [
        531,
        537,
      ],
      "type": "instruction",
    },
    {
      "disp": 65515,
      "instruction": "JMP",
      "label": null,
      "position": [
        554,
        566,
      ],
      "type": "instruction",
    },
    {
      "instruction": "RET",
      "label": null,
      "position": [
        583,
        586,
      ],
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-mem",
      "out": "AX",
      "position": [
        605,
        626,
      ],
      "size": 16,
      "src": {
        "address": 4096,
        "mode": "direct",
      },
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-mem",
      "out": "CX",
      "position": [
        628,
        650,
      ],
      "size": 16,
      "src": {
        "address": 4098,
        "mode": "direct",
      },
      "type": "instruction",
    },
    {
      "disp": 4097,
      "instruction": "CALL",
      "label": null,
      "position": [
        652,
        665,
      ],
      "type": "instruction",
    },
    {
      "instruction": "HLT",
      "label": null,
      "position": [
        667,
        670,
      ],
      "type": "instruction",
    },
  ],
  "store": GlobalStore {
    "codeMemory": Set {
      12288,
      12289,
      12290,
      12291,
      12292,
      12293,
      12294,
      12295,
      12296,
      12297,
      12298,
      12299,
      12300,
      12301,
      12302,
      12303,
      12304,
      12305,
      12306,
      12307,
      12308,
      12309,
      8192,
      8193,
      8194,
      8195,
      8196,
      8197,
      8198,
      8199,
      8200,
      8201,
      8202,
      8203,
    },
    "labels": Map {
      "NUMEROBINARIO" => {
        "address": 4096,
        "type": "DW",
      },
      "CANTROTACIONES" => {
        "address": 4098,
        "type": "DW",
      },
      "ROTARIZQ" => {
        "address": 12288,
        "type": "instruction",
      },
      "ROTARIZQ_FIN" => {
        "address": 12299,
        "type": "instruction",
      },
      "ROTARDER" => {
        "address": 12300,
        "type": "instruction",
      },
    },
  },
  "success": true,
}
`;

exports[`Fixtures > should match snapshot of sumador_de_tablas.asm 1`] = `
{
  "data": [
    {
      "directive": "EQU",
      "label": "LEN",
      "position": [
        35,
        40,
      ],
      "type": "data-directive",
      "value": 5,
    },
    {
      "directive": "DW",
      "label": "A",
      "position": [
        54,
        73,
      ],
      "type": "data-directive",
      "values": [
        25,
        4,
        77,
        32,
        6,
      ],
    },
    {
      "directive": "DW",
      "label": "B",
      "position": [
        87,
        106,
      ],
      "type": "data-directive",
      "values": [
        4,
        89,
        32,
        55,
        1,
      ],
    },
    {
      "directive": "DW",
      "label": "RES",
      "position": [
        122,
        138,
      ],
      "type": "data-directive",
      "values": [
        "?",
        "?",
        "?",
        "?",
        "?",
      ],
    },
  ],
  "instructions": [
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "CX",
      "position": [
        173,
        184,
      ],
      "size": 16,
      "src": 5,
      "type": "instruction",
    },
    {
      "instruction": "ADD",
      "label": null,
      "mode": "reg<-imd",
      "out": "CX",
      "position": [
        210,
        221,
      ],
      "size": 16,
      "src": 5,
      "type": "instruction",
    },
    {
      "instruction": "SUB",
      "label": null,
      "mode": "reg<-imd",
      "out": "CX",
      "position": [
        233,
        242,
      ],
      "size": 16,
      "src": 2,
      "type": "instruction",
    },
    {
      "disp": 29,
      "instruction": "JS",
      "label": null,
      "position": [
        254,
        260,
      ],
      "type": "instruction",
    },
    {
      "disp": 27,
      "instruction": "JZ",
      "label": null,
      "position": [
        272,
        278,
      ],
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": "SUMA",
      "mode": "reg<-imd",
      "out": "BX",
      "position": [
        290,
        306,
      ],
      "size": 16,
      "src": 4096,
      "type": "instruction",
    },
    {
      "instruction": "ADD",
      "label": null,
      "mode": "reg<-reg",
      "out": "BX",
      "position": [
        318,
        328,
      ],
      "size": 16,
      "src": "CX",
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-mem",
      "out": "AX",
      "position": [
        340,
        352,
      ],
      "size": 16,
      "src": {
        "mode": "indirect",
      },
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "BX",
      "position": [
        364,
        380,
      ],
      "size": 16,
      "src": 4106,
      "type": "instruction",
    },
    {
      "instruction": "ADD",
      "label": null,
      "mode": "reg<-reg",
      "out": "BX",
      "position": [
        392,
        402,
      ],
      "size": 16,
      "src": "CX",
      "type": "instruction",
    },
    {
      "instruction": "ADD",
      "label": null,
      "mode": "reg<-mem",
      "out": "AX",
      "position": [
        414,
        426,
      ],
      "size": 16,
      "src": {
        "mode": "indirect",
      },
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "BX",
      "position": [
        438,
        456,
      ],
      "size": 16,
      "src": 4116,
      "type": "instruction",
    },
    {
      "instruction": "ADD",
      "label": null,
      "mode": "reg<-reg",
      "out": "BX",
      "position": [
        468,
        478,
      ],
      "size": 16,
      "src": "CX",
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "mem<-reg",
      "out": {
        "mode": "indirect",
      },
      "position": [
        490,
        502,
      ],
      "size": 16,
      "src": "AX",
      "type": "instruction",
    },
    {
      "instruction": "SUB",
      "label": null,
      "mode": "reg<-imd",
      "out": "CX",
      "position": [
        514,
        523,
      ],
      "size": 16,
      "src": 2,
      "type": "instruction",
    },
    {
      "disp": 229,
      "instruction": "JNS",
      "label": null,
      "position": [
        535,
        543,
      ],
      "type": "instruction",
    },
    {
      "instruction": "HLT",
      "label": "FIN",
      "position": [
        555,
        558,
      ],
      "type": "instruction",
    },
  ],
  "store": GlobalStore {
    "codeMemory": Set {
      8192,
      8193,
      8194,
      8195,
      8196,
      8197,
      8198,
      8199,
      8200,
      8201,
      8202,
      8203,
      8204,
      8205,
      8206,
      8207,
      8208,
      8209,
      8210,
      8211,
      8212,
      8213,
      8214,
      8215,
      8216,
      8217,
      8218,
      8219,
      8220,
      8221,
      8222,
      8223,
      8224,
      8225,
      8226,
      8227,
      8228,
      8229,
      8230,
      8231,
      8232,
      8233,
      8234,
    },
    "labels": Map {
      "LEN" => {
        "constant": {
          "directive": "EQU",
          "label": "LEN",
          "position": [
            35,
            40,
          ],
          "type": "data-directive",
          "value": 5,
        },
        "type": "EQU",
      },
      "A" => {
        "address": 4096,
        "type": "DW",
      },
      "B" => {
        "address": 4106,
        "type": "DW",
      },
      "RES" => {
        "address": 4116,
        "type": "DW",
      },
      "SUMA" => {
        "address": 8207,
        "type": "instruction",
      },
      "FIN" => {
        "address": 8234,
        "type": "instruction",
      },
    },
  },
  "success": true,
}
`;

exports[`Fixtures > should match snapshot of timer.asm 1`] = `
{
  "data": [
    {
      "directive": "EQU",
      "label": "EOI",
      "position": [
        269,
        276,
      ],
      "type": "data-directive",
      "value": 32,
    },
    {
      "directive": "EQU",
      "label": "IMR",
      "position": [
        284,
        291,
      ],
      "type": "data-directive",
      "value": 33,
    },
    {
      "directive": "EQU",
      "label": "IRR",
      "position": [
        299,
        306,
      ],
      "type": "data-directive",
      "value": 34,
    },
    {
      "directive": "EQU",
      "label": "INT0",
      "position": [
        314,
        321,
      ],
      "type": "data-directive",
      "value": 36,
    },
    {
      "directive": "EQU",
      "label": "INT1",
      "position": [
        329,
        336,
      ],
      "type": "data-directive",
      "value": 37,
    },
    {
      "directive": "EQU",
      "label": "CONT",
      "position": [
        346,
        353,
      ],
      "type": "data-directive",
      "value": 16,
    },
    {
      "directive": "EQU",
      "label": "COMP",
      "position": [
        361,
        368,
      ],
      "type": "data-directive",
      "value": 17,
    },
    {
      "directive": "EQU",
      "label": "N_F10",
      "position": [
        378,
        384,
      ],
      "type": "data-directive",
      "value": 10,
    },
    {
      "directive": "DW",
      "label": null,
      "position": [
        415,
        428,
      ],
      "type": "data-directive",
      "values": [
        12312,
      ],
    },
    {
      "directive": "EQU",
      "label": "N_CLK",
      "position": [
        438,
        444,
      ],
      "type": "data-directive",
      "value": 11,
    },
    {
      "directive": "DW",
      "label": null,
      "position": [
        475,
        488,
      ],
      "type": "data-directive",
      "values": [
        12334,
      ],
    },
    {
      "directive": "DB",
      "label": "INPUT_MSJ",
      "position": [
        525,
        566,
      ],
      "type": "data-directive",
      "values": [
        12,
        73,
        110,
        103,
        114,
        101,
        115,
        101,
        32,
        117,
        110,
        32,
        116,
        105,
        101,
        109,
        112,
        111,
        32,
        40,
        109,
        225,
        120,
        32,
        57,
        57,
        32,
        115,
        101,
        103,
        41,
        58,
        32,
      ],
    },
    {
      "directive": "DB",
      "label": "ERR_MSJ",
      "position": [
        578,
        602,
      ],
      "type": "data-directive",
      "values": [
        10,
        78,
        250,
        109,
        101,
        114,
        111,
        32,
        105,
        110,
        118,
        225,
        108,
        105,
        100,
        111,
      ],
    },
    {
      "directive": "DB",
      "label": "DISP",
      "position": [
        616,
        623,
      ],
      "type": "data-directive",
      "values": [
        8,
        8,
      ],
    },
    {
      "directive": "DB",
      "label": "SEG_H",
      "position": [
        650,
        656,
      ],
      "type": "data-directive",
      "values": [
        48,
      ],
    },
    {
      "directive": "DB",
      "label": "SEG_L",
      "position": [
        668,
        674,
      ],
      "type": "data-directive",
      "values": [
        48,
      ],
    },
    {
      "directive": "DB",
      "label": "COUNT",
      "position": [
        686,
        692,
      ],
      "type": "data-directive",
      "values": [
        0,
      ],
    },
    {
      "directive": "EQU",
      "label": "INPUT_LEN",
      "position": [
        730,
        767,
      ],
      "type": "data-directive",
      "value": 33,
    },
    {
      "directive": "EQU",
      "label": "ERR_LEN",
      "position": [
        779,
        811,
      ],
      "type": "data-directive",
      "value": 16,
    },
    {
      "directive": "EQU",
      "label": "DISP_LEN",
      "position": [
        823,
        853,
      ],
      "type": "data-directive",
      "value": 4,
    },
    {
      "directive": "EQU",
      "label": "CERO",
      "position": [
        865,
        872,
      ],
      "type": "data-directive",
      "value": 48,
    },
    {
      "directive": "EQU",
      "label": "NUEVE",
      "position": [
        884,
        891,
      ],
      "type": "data-directive",
      "value": 57,
    },
  ],
  "instructions": [
    {
      "instruction": "MOV",
      "label": "ES_NUM",
      "mode": "reg<-mem",
      "out": "AL",
      "position": [
        1110,
        1122,
      ],
      "size": 8,
      "src": {
        "mode": "indirect",
      },
      "type": "instruction",
    },
    {
      "instruction": "CMP",
      "label": null,
      "mode": "reg<-imd",
      "out": "AL",
      "position": [
        1140,
        1152,
      ],
      "size": 8,
      "src": 48,
      "type": "instruction",
    },
    {
      "disp": 12,
      "instruction": "JS",
      "label": null,
      "position": [
        1170,
        1181,
      ],
      "type": "instruction",
    },
    {
      "instruction": "CMP",
      "label": null,
      "mode": "reg<-imd",
      "out": "AL",
      "position": [
        1199,
        1214,
      ],
      "size": 8,
      "src": 58,
      "type": "instruction",
    },
    {
      "disp": 6,
      "instruction": "JNS",
      "label": null,
      "position": [
        1232,
        1244,
      ],
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "AL",
      "position": [
        1262,
        1274,
      ],
      "size": 8,
      "src": 255,
      "type": "instruction",
    },
    {
      "disp": 3,
      "instruction": "JMP",
      "label": null,
      "position": [
        1292,
        1306,
      ],
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": "ES_NUM_F",
      "mode": "reg<-imd",
      "out": "AL",
      "position": [
        1324,
        1335,
      ],
      "size": 8,
      "src": 0,
      "type": "instruction",
    },
    {
      "instruction": "RET",
      "label": "ES_NUM_RET",
      "position": [
        1353,
        1356,
      ],
      "type": "instruction",
    },
    {
      "instruction": "PUSH",
      "label": "HANDLE_F10",
      "position": [
        1474,
        1481,
      ],
      "register": "AX",
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "mem<-imd",
      "out": {
        "address": 4149,
        "mode": "direct",
      },
      "position": [
        1499,
        1514,
      ],
      "size": 8,
      "src": 255,
      "type": "instruction",
    },
    {
      "address": "21h",
      "instruction": "IN",
      "label": null,
      "port": "fixed",
      "position": [
        1532,
        1542,
      ],
      "size": 8,
      "type": "instruction",
    },
    {
      "instruction": "XOR",
      "label": null,
      "mode": "reg<-imd",
      "out": "AL",
      "position": [
        1560,
        1577,
      ],
      "size": 8,
      "src": 1,
      "type": "instruction",
    },
    {
      "address": "21h",
      "instruction": "OUT",
      "label": null,
      "port": "fixed",
      "position": [
        1595,
        1606,
      ],
      "size": 8,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "AL",
      "position": [
        1624,
        1635,
      ],
      "size": 8,
      "src": 32,
      "type": "instruction",
    },
    {
      "address": "20h",
      "instruction": "OUT",
      "label": null,
      "port": "fixed",
      "position": [
        1653,
        1664,
      ],
      "size": 8,
      "type": "instruction",
    },
    {
      "instruction": "POP",
      "label": null,
      "position": [
        1682,
        1688,
      ],
      "register": "AX",
      "type": "instruction",
    },
    {
      "instruction": "IRET",
      "label": null,
      "position": [
        1706,
        1710,
      ],
      "type": "instruction",
    },
    {
      "instruction": "PUSH",
      "label": "HANDLE_CLK",
      "position": [
        1848,
        1855,
      ],
      "register": "AX",
      "type": "instruction",
    },
    {
      "instruction": "PUSH",
      "label": null,
      "position": [
        1873,
        1880,
      ],
      "register": "BX",
      "type": "instruction",
    },
    {
      "instruction": "CMP",
      "label": null,
      "mode": "mem<-imd",
      "out": {
        "address": 4149,
        "mode": "direct",
      },
      "position": [
        1898,
        1910,
      ],
      "size": 8,
      "src": 0,
      "type": "instruction",
    },
    {
      "disp": 22,
      "instruction": "JZ",
      "label": null,
      "position": [
        1928,
        1945,
      ],
      "type": "instruction",
    },
    {
      "address": 4148,
      "instruction": "DEC",
      "label": null,
      "mode": "mem-direct",
      "position": [
        1991,
        2000,
      ],
      "size": 8,
      "type": "instruction",
    },
    {
      "instruction": "CMP",
      "label": null,
      "mode": "mem<-imd",
      "out": {
        "address": 4148,
        "mode": "direct",
      },
      "position": [
        2018,
        2033,
      ],
      "size": 8,
      "src": 48,
      "type": "instruction",
    },
    {
      "disp": 10,
      "instruction": "JNS",
      "label": null,
      "position": [
        2051,
        2069,
      ],
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "mem<-imd",
      "out": {
        "address": 4148,
        "mode": "direct",
      },
      "position": [
        2087,
        2103,
      ],
      "size": 8,
      "src": 57,
      "type": "instruction",
    },
    {
      "address": 4147,
      "instruction": "DEC",
      "label": null,
      "mode": "mem-direct",
      "position": [
        2121,
        2130,
      ],
      "size": 8,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": "HANDLE_CLK_END",
      "mode": "reg<-imd",
      "out": "BX",
      "position": [
        2148,
        2167,
      ],
      "size": 16,
      "src": 4145,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "AL",
      "position": [
        2185,
        2201,
      ],
      "size": 8,
      "src": 4,
      "type": "instruction",
    },
    {
      "instruction": "INT",
      "label": null,
      "position": [
        2219,
        2224,
      ],
      "type": "instruction",
      "value": 7,
    },
    {
      "address": "11h",
      "instruction": "IN",
      "label": null,
      "port": "fixed",
      "position": [
        2242,
        2253,
      ],
      "size": 8,
      "type": "instruction",
    },
    {
      "instruction": "INC",
      "label": null,
      "mode": "reg",
      "out": "AL",
      "position": [
        2285,
        2291,
      ],
      "type": "instruction",
    },
    {
      "address": "11h",
      "instruction": "OUT",
      "label": null,
      "port": "fixed",
      "position": [
        2309,
        2321,
      ],
      "size": 8,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "AL",
      "position": [
        2339,
        2350,
      ],
      "size": 8,
      "src": 32,
      "type": "instruction",
    },
    {
      "address": "20h",
      "instruction": "OUT",
      "label": null,
      "port": "fixed",
      "position": [
        2368,
        2379,
      ],
      "size": 8,
      "type": "instruction",
    },
    {
      "instruction": "POP",
      "label": null,
      "position": [
        2397,
        2403,
      ],
      "register": "BX",
      "type": "instruction",
    },
    {
      "instruction": "POP",
      "label": null,
      "position": [
        2421,
        2427,
      ],
      "register": "AX",
      "type": "instruction",
    },
    {
      "instruction": "IRET",
      "label": null,
      "position": [
        2445,
        2449,
      ],
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "BX",
      "position": [
        2482,
        2506,
      ],
      "size": 16,
      "src": 4096,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "AL",
      "position": [
        2516,
        2533,
      ],
      "size": 8,
      "src": 33,
      "type": "instruction",
    },
    {
      "instruction": "INT",
      "label": null,
      "position": [
        2543,
        2548,
      ],
      "type": "instruction",
      "value": 7,
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "BX",
      "position": [
        2558,
        2578,
      ],
      "size": 16,
      "src": 4147,
      "type": "instruction",
    },
    {
      "instruction": "INT",
      "label": null,
      "position": [
        2588,
        2593,
      ],
      "type": "instruction",
      "value": 6,
    },
    {
      "disp": 4080,
      "instruction": "CALL",
      "label": null,
      "position": [
        2603,
        2614,
      ],
      "type": "instruction",
    },
    {
      "instruction": "CMP",
      "label": null,
      "mode": "reg<-imd",
      "out": "AL",
      "position": [
        2624,
        2635,
      ],
      "size": 8,
      "src": 0,
      "type": "instruction",
    },
    {
      "disp": 60,
      "instruction": "JZ",
      "label": null,
      "position": [
        2645,
        2653,
      ],
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "BX",
      "position": [
        2663,
        2683,
      ],
      "size": 16,
      "src": 4148,
      "type": "instruction",
    },
    {
      "instruction": "INT",
      "label": null,
      "position": [
        2693,
        2698,
      ],
      "type": "instruction",
      "value": 6,
    },
    {
      "disp": 4066,
      "instruction": "CALL",
      "label": null,
      "position": [
        2708,
        2719,
      ],
      "type": "instruction",
    },
    {
      "instruction": "CMP",
      "label": null,
      "mode": "reg<-imd",
      "out": "AL",
      "position": [
        2729,
        2740,
      ],
      "size": 8,
      "src": 0,
      "type": "instruction",
    },
    {
      "disp": 46,
      "instruction": "JZ",
      "label": null,
      "position": [
        2750,
        2758,
      ],
      "type": "instruction",
    },
    {
      "instruction": "CLI",
      "label": null,
      "position": [
        2770,
        2773,
      ],
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "AL",
      "position": [
        2783,
        2792,
      ],
      "size": 8,
      "src": 1,
      "type": "instruction",
    },
    {
      "address": "11h",
      "instruction": "OUT",
      "label": null,
      "port": "fixed",
      "position": [
        2802,
        2814,
      ],
      "size": 8,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "AL",
      "position": [
        2824,
        2833,
      ],
      "size": 8,
      "src": 0,
      "type": "instruction",
    },
    {
      "address": "10h",
      "instruction": "OUT",
      "label": null,
      "port": "fixed",
      "position": [
        2843,
        2855,
      ],
      "size": 8,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "AL",
      "position": [
        2865,
        2882,
      ],
      "size": 8,
      "src": 252,
      "type": "instruction",
    },
    {
      "address": "21h",
      "instruction": "OUT",
      "label": null,
      "port": "fixed",
      "position": [
        2892,
        2903,
      ],
      "size": 8,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "AL",
      "position": [
        2913,
        2926,
      ],
      "size": 8,
      "src": 10,
      "type": "instruction",
    },
    {
      "address": "24h",
      "instruction": "OUT",
      "label": null,
      "port": "fixed",
      "position": [
        2936,
        2948,
      ],
      "size": 8,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "AL",
      "position": [
        2958,
        2971,
      ],
      "size": 8,
      "src": 11,
      "type": "instruction",
    },
    {
      "address": "25h",
      "instruction": "OUT",
      "label": null,
      "port": "fixed",
      "position": [
        2981,
        2993,
      ],
      "size": 8,
      "type": "instruction",
    },
    {
      "instruction": "STI",
      "label": null,
      "position": [
        3003,
        3006,
      ],
      "type": "instruction",
    },
    {
      "instruction": "CMP",
      "label": "LOOP",
      "mode": "mem<-imd",
      "out": {
        "address": 4147,
        "mode": "direct",
      },
      "position": [
        3018,
        3033,
      ],
      "size": 8,
      "src": 48,
      "type": "instruction",
    },
    {
      "disp": 248,
      "instruction": "JNZ",
      "label": null,
      "position": [
        3043,
        3051,
      ],
      "type": "instruction",
    },
    {
      "instruction": "CMP",
      "label": null,
      "mode": "mem<-imd",
      "out": {
        "address": 4148,
        "mode": "direct",
      },
      "position": [
        3061,
        3076,
      ],
      "size": 8,
      "src": 48,
      "type": "instruction",
    },
    {
      "disp": 240,
      "instruction": "JNZ",
      "label": null,
      "position": [
        3086,
        3094,
      ],
      "type": "instruction",
    },
    {
      "disp": 8,
      "instruction": "JMP",
      "label": null,
      "position": [
        3104,
        3111,
      ],
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": "ERROR",
      "mode": "reg<-imd",
      "out": "BX",
      "position": [
        3123,
        3145,
      ],
      "size": 16,
      "src": 4129,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "AL",
      "position": [
        3155,
        3170,
      ],
      "size": 8,
      "src": 16,
      "type": "instruction",
    },
    {
      "instruction": "INT",
      "label": null,
      "position": [
        3180,
        3185,
      ],
      "type": "instruction",
      "value": 7,
    },
    {
      "instruction": "INT",
      "label": "FIN",
      "position": [
        3195,
        3200,
      ],
      "type": "instruction",
      "value": 0,
    },
  ],
  "store": GlobalStore {
    "codeMemory": Set {
      12288,
      12289,
      12290,
      12291,
      12292,
      12293,
      12294,
      12295,
      12296,
      12297,
      12298,
      12299,
      12300,
      12301,
      12302,
      12303,
      12304,
      12305,
      12306,
      12307,
      12308,
      12309,
      12310,
      12311,
      12312,
      12313,
      12314,
      12315,
      12316,
      12317,
      12318,
      12319,
      12320,
      12321,
      12322,
      12323,
      12324,
      12325,
      12326,
      12327,
      12328,
      12329,
      12330,
      12331,
      12332,
      12333,
      12334,
      12335,
      12336,
      12337,
      12338,
      12339,
      12340,
      12341,
      12342,
      12343,
      12344,
      12345,
      12346,
      12347,
      12348,
      12349,
      12350,
      12351,
      12352,
      12353,
      12354,
      12355,
      12356,
      12357,
      12358,
      12359,
      12360,
      12361,
      12362,
      12363,
      12364,
      12365,
      12366,
      12367,
      12368,
      12369,
      12370,
      12371,
      12372,
      12373,
      12374,
      12375,
      12376,
      12377,
      12378,
      12379,
      12380,
      12381,
      12382,
      12383,
      12384,
      12385,
      12386,
      8192,
      8193,
      8194,
      8195,
      8196,
      8197,
      8198,
      8199,
      8200,
      8201,
      8202,
      8203,
      8204,
      8205,
      8206,
      8207,
      8208,
      8209,
      8210,
      8211,
      8212,
      8213,
      8214,
      8215,
      8216,
      8217,
      8218,
      8219,
      8220,
      8221,
      8222,
      8223,
      8224,
      8225,
      8226,
      8227,
      8228,
      8229,
      8230,
      8231,
      8232,
      8233,
      8234,
      8235,
      8236,
      8237,
      8238,
      8239,
      8240,
      8241,
      8242,
      8243,
      8244,
      8245,
      8246,
      8247,
      8248,
      8249,
      8250,
      8251,
      8252,
      8253,
      8254,
      8255,
      8256,
      8257,
      8258,
      8259,
      8260,
      8261,
      8262,
      8263,
      8264,
      8265,
      8266,
      8267,
      8268,
      8269,
      8270,
      8271,
      8272,
      8273,
      8274,
      8275,
      8276,
      8277,
      8278,
      8279,
      8280,
      8281,
      8282,
      8283,
    },
    "labels": Map {
      "EOI" => {
        "constant": {
          "directive": "EQU",
          "label": "EOI",
          "position": [
            269,
            276,
          ],
          "type": "data-directive",
          "value": 32,
        },
        "type": "EQU",
      },
      "IMR" => {
        "constant": {
          "directive": "EQU",
          "label": "IMR",
          "position": [
            284,
            291,
          ],
          "type": "data-directive",
          "value": 33,
        },
        "type": "EQU",
      },
      "IRR" => {
        "constant": {
          "directive": "EQU",
          "label": "IRR",
          "position": [
            299,
            306,
          ],
          "type": "data-directive",
          "value": 34,
        },
        "type": "EQU",
      },
      "INT0" => {
        "constant": {
          "directive": "EQU",
          "label": "INT0",
          "position": [
            314,
            321,
          ],
          "type": "data-directive",
          "value": 36,
        },
        "type": "EQU",
      },
      "INT1" => {
        "constant": {
          "directive": "EQU",
          "label": "INT1",
          "position": [
            329,
            336,
          ],
          "type": "data-directive",
          "value": 37,
        },
        "type": "EQU",
      },
      "CONT" => {
        "constant": {
          "directive": "EQU",
          "label": "CONT",
          "position": [
            346,
            353,
          ],
          "type": "data-directive",
          "value": 16,
        },
        "type": "EQU",
      },
      "COMP" => {
        "constant": {
          "directive": "EQU",
          "label": "COMP",
          "position": [
            361,
            368,
          ],
          "type": "data-directive",
          "value": 17,
        },
        "type": "EQU",
      },
      "N_F10" => {
        "constant": {
          "directive": "EQU",
          "label": "N_F10",
          "position": [
            378,
            384,
          ],
          "type": "data-directive",
          "value": 10,
        },
        "type": "EQU",
      },
      "N_CLK" => {
        "constant": {
          "directive": "EQU",
          "label": "N_CLK",
          "position": [
            438,
            444,
          ],
          "type": "data-directive",
          "value": 11,
        },
        "type": "EQU",
      },
      "INPUT_MSJ" => {
        "address": 4096,
        "type": "DB",
      },
      "ERR_MSJ" => {
        "address": 4129,
        "type": "DB",
      },
      "DISP" => {
        "address": 4145,
        "type": "DB",
      },
      "SEG_H" => {
        "address": 4147,
        "type": "DB",
      },
      "SEG_L" => {
        "address": 4148,
        "type": "DB",
      },
      "COUNT" => {
        "address": 4149,
        "type": "DB",
      },
      "INPUT_LEN" => {
        "constant": {
          "directive": "EQU",
          "label": "INPUT_LEN",
          "position": [
            730,
            767,
          ],
          "type": "data-directive",
          "value": 33,
        },
        "type": "EQU",
      },
      "ERR_LEN" => {
        "constant": {
          "directive": "EQU",
          "label": "ERR_LEN",
          "position": [
            779,
            811,
          ],
          "type": "data-directive",
          "value": 16,
        },
        "type": "EQU",
      },
      "DISP_LEN" => {
        "constant": {
          "directive": "EQU",
          "label": "DISP_LEN",
          "position": [
            823,
            853,
          ],
          "type": "data-directive",
          "value": 4,
        },
        "type": "EQU",
      },
      "CERO" => {
        "constant": {
          "directive": "EQU",
          "label": "CERO",
          "position": [
            865,
            872,
          ],
          "type": "data-directive",
          "value": 48,
        },
        "type": "EQU",
      },
      "NUEVE" => {
        "constant": {
          "directive": "EQU",
          "label": "NUEVE",
          "position": [
            884,
            891,
          ],
          "type": "data-directive",
          "value": 57,
        },
        "type": "EQU",
      },
      "ES_NUM" => {
        "address": 12288,
        "type": "instruction",
      },
      "ES_NUM_F" => {
        "address": 12308,
        "type": "instruction",
      },
      "ES_NUM_RET" => {
        "address": 12311,
        "type": "instruction",
      },
      "HANDLE_F10" => {
        "address": 12312,
        "type": "instruction",
      },
      "HANDLE_CLK" => {
        "address": 12334,
        "type": "instruction",
      },
      "HANDLE_CLK_END" => {
        "address": 12366,
        "type": "instruction",
      },
      "LOOP" => {
        "address": 8255,
        "type": "instruction",
      },
      "ERROR" => {
        "address": 8274,
        "type": "instruction",
      },
      "FIN" => {
        "address": 8282,
        "type": "instruction",
      },
    },
  },
  "success": true,
}
`;

exports[`Fixtures > should match snapshot of vocales.asm 1`] = `
{
  "data": [
    {
      "directive": "DB",
      "label": "VOCALES",
      "position": [
        49,
        64,
      ],
      "type": "data-directive",
      "values": [
        65,
        69,
        73,
        79,
        85,
        97,
        101,
        105,
        111,
        117,
      ],
    },
    {
      "directive": "DB",
      "label": "FIN_VOCALES",
      "position": [
        93,
        97,
      ],
      "type": "data-directive",
      "values": [
        "?",
      ],
    },
    {
      "directive": "DB",
      "label": "TEXTO",
      "position": [
        120,
        134,
      ],
      "type": "data-directive",
      "values": [
        80,
        105,
        114,
        117,
        108,
        101,
        116,
        97,
        46,
      ],
    },
    {
      "directive": "DB",
      "label": "FIN_TEXTO",
      "position": [
        161,
        165,
      ],
      "type": "data-directive",
      "values": [
        "?",
      ],
    },
  ],
  "instructions": [
    {
      "instruction": "MOV",
      "label": "ES_VOCAL",
      "mode": "reg<-imd",
      "out": "BX",
      "position": [
        306,
        332,
      ],
      "size": 16,
      "src": 4095,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "AH",
      "position": [
        349,
        360,
      ],
      "size": 8,
      "src": 0,
      "type": "instruction",
    },
    {
      "instruction": "INC",
      "label": "ES_VOCAL_LOOP",
      "mode": "reg",
      "out": "BX",
      "position": [
        377,
        383,
      ],
      "type": "instruction",
    },
    {
      "instruction": "CMP",
      "label": null,
      "mode": "reg<-imd",
      "out": "BX",
      "position": [
        400,
        426,
      ],
      "size": 16,
      "src": 4106,
      "type": "instruction",
    },
    {
      "disp": 7,
      "instruction": "JZ",
      "label": null,
      "position": [
        443,
        458,
      ],
      "type": "instruction",
    },
    {
      "instruction": "CMP",
      "label": null,
      "mode": "reg<-mem",
      "out": "AL",
      "position": [
        475,
        487,
      ],
      "size": 8,
      "src": {
        "mode": "indirect",
      },
      "type": "instruction",
    },
    {
      "disp": 245,
      "instruction": "JNZ",
      "label": null,
      "position": [
        504,
        521,
      ],
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "AH",
      "position": [
        538,
        550,
      ],
      "size": 8,
      "src": 255,
      "type": "instruction",
    },
    {
      "instruction": "RET",
      "label": "ES_VOCAL_FIN",
      "position": [
        567,
        570,
      ],
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": "CANT_VOCALES",
      "mode": "reg<-imd",
      "out": "DX",
      "position": [
        757,
        766,
      ],
      "size": 16,
      "src": 0,
      "type": "instruction",
    },
    {
      "instruction": "DEC",
      "label": "CANT_VOCALES_LOOP",
      "mode": "reg",
      "out": "CX",
      "position": [
        787,
        793,
      ],
      "type": "instruction",
    },
    {
      "disp": 18,
      "instruction": "JS",
      "label": null,
      "position": [
        814,
        833,
      ],
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-mem",
      "out": "AL",
      "position": [
        854,
        865,
      ],
      "size": 8,
      "src": {
        "mode": "indirect",
      },
      "type": "instruction",
    },
    {
      "instruction": "PUSH",
      "label": null,
      "position": [
        886,
        893,
      ],
      "register": "BX",
      "type": "instruction",
    },
    {
      "disp": 65503,
      "instruction": "CALL",
      "label": null,
      "position": [
        914,
        927,
      ],
      "type": "instruction",
    },
    {
      "instruction": "POP",
      "label": null,
      "position": [
        948,
        954,
      ],
      "register": "BX",
      "type": "instruction",
    },
    {
      "instruction": "INC",
      "label": null,
      "mode": "reg",
      "out": "BX",
      "position": [
        975,
        981,
      ],
      "type": "instruction",
    },
    {
      "instruction": "CMP",
      "label": null,
      "mode": "reg<-imd",
      "out": "AH",
      "position": [
        1002,
        1010,
      ],
      "size": 8,
      "src": 0,
      "type": "instruction",
    },
    {
      "disp": 239,
      "instruction": "JZ",
      "label": null,
      "position": [
        1031,
        1051,
      ],
      "type": "instruction",
    },
    {
      "instruction": "INC",
      "label": null,
      "mode": "reg",
      "out": "DX",
      "position": [
        1072,
        1078,
      ],
      "type": "instruction",
    },
    {
      "disp": 65515,
      "instruction": "JMP",
      "label": null,
      "position": [
        1099,
        1120,
      ],
      "type": "instruction",
    },
    {
      "instruction": "RET",
      "label": "CANT_VOCALES_FIN",
      "position": [
        1141,
        1144,
      ],
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "BX",
      "position": [
        1189,
        1209,
      ],
      "size": 16,
      "src": 4107,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "CX",
      "position": [
        1226,
        1265,
      ],
      "size": 16,
      "src": 9,
      "type": "instruction",
    },
    {
      "disp": 4108,
      "instruction": "CALL",
      "label": null,
      "position": [
        1282,
        1299,
      ],
      "type": "instruction",
    },
    {
      "instruction": "HLT",
      "label": null,
      "position": [
        1316,
        1319,
      ],
      "type": "instruction",
    },
  ],
  "store": GlobalStore {
    "codeMemory": Set {
      12288,
      12289,
      12290,
      12291,
      12292,
      12293,
      12294,
      12295,
      12296,
      12297,
      12298,
      12299,
      12300,
      12301,
      12302,
      12303,
      12304,
      12305,
      12306,
      12307,
      12308,
      12309,
      12310,
      12311,
      12312,
      12313,
      12314,
      12315,
      12316,
      12317,
      12318,
      12319,
      12320,
      12321,
      12322,
      12323,
      12324,
      12325,
      12326,
      12327,
      12328,
      12329,
      12330,
      12331,
      12332,
      12333,
      8192,
      8193,
      8194,
      8195,
      8196,
      8197,
      8198,
      8199,
      8200,
      8201,
    },
    "labels": Map {
      "VOCALES" => {
        "address": 4096,
        "type": "DB",
      },
      "FIN_VOCALES" => {
        "address": 4106,
        "type": "DB",
      },
      "TEXTO" => {
        "address": 4107,
        "type": "DB",
      },
      "FIN_TEXTO" => {
        "address": 4116,
        "type": "DB",
      },
      "ES_VOCAL" => {
        "address": 12288,
        "type": "instruction",
      },
      "ES_VOCAL_LOOP" => {
        "address": 12294,
        "type": "instruction",
      },
      "ES_VOCAL_FIN" => {
        "address": 12308,
        "type": "instruction",
      },
      "CANT_VOCALES" => {
        "address": 12309,
        "type": "instruction",
      },
      "CANT_VOCALES_LOOP" => {
        "address": 12312,
        "type": "instruction",
      },
      "CANT_VOCALES_FIN" => {
        "address": 12333,
        "type": "instruction",
      },
    },
  },
  "success": true,
}
`;
